Calculates the size of the image based off the window and ensures image never goes off screen (vert or hori)

--- a/src/components/MainImage/styles.module.scss
+++ b/src/components/MainImage/styles.module.scss
@@ -1,8 +1,11 @@
 .MainImage {
   width: 80vw;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   img {
-    width: 80vw;
+    width: 100vw;
   }
 }
